	Applications using libRmath may need to be re-compiled.

    o	The methods used by optim() have entry points in R_ext/Applic.h
	and have a more general interface documented in `Writing R
	Extensions'.

    o	The bessel_? entry points are now suitable to be called
	repeatedly from code loaded by .C().  (They did not free
	memory until .C() returned in earlier versions of R.)


BUG FIXES

    o	Insufficient information was being recorded in the display list
	for the identify() function.  In particular, the "plot="
	argument was ignored when replaying the display list. (PR#1157)

    o	The vertical alignment of mathematical annotations was wrong.
	When a vertical adjustment was not given, it was bottom-adjusting
	i.e,. it was treating adj=0 as adj=c(0, 0).  It now treats
	adj=0 as adj=c(0, 0.5) as for "normal" text. (PR#1302)

    o	the man page (doc/R.1) wasn't updated with the proper VERSION.

    o	smooth.spline() had a "df = 5" default which was never used and
	hence extraneous and misleading.

    o	read.fwf() was interpreting comment chars in its call to scan:
	replaced by a call to readlines(). (PR#1297/8)

    o	The default has been changed to scan(comment.char="") for
	consistency with earlier code (as in the previous item).

    o	bxp(*, notch.frac = f) now draws the median line correctly.

    o	Current versions of gs were rotating the output of
	bitmap(type = "pdfwrite") and when converting the output
	of postscript() to PDF; this has been circumvented by
	suppressing the %%Orientation comment for non-standard
	paper sizes.

    o	plot.ts(x, log = "y") works again when x has 0s, also for matrix x.

    o	add1(), drop1(), step() work again on glm objects with
	formulae with rhs's containing `.'.  (Broken by a `bug fix'
	(in reality an API change) in 1.2.1.)

    o	optim(method="BFGS") was not reporting reaching `maxit'
	iterations in the convergence component of the return value.

    o	aov and model.tables were failing on multistrata models with